--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter_slidable: ^1.2.0
   mobx: ^2.0.6+1
   flutter_mobx: ^2.0.4
+  get_it: ^7.2.0
 
 dev_dependencies:
   flutter_test:
